=== SVN

* Fixed postgres adapter to define PGconn#async_exec as alias to #exec if not defined (for pure-ruby postgres driver).

* Added String#to_date. Updated mysql adapter to use String#to_date for mysql date types (thanks drfreeze).

=== 1.0.2 (2008-01-14)

* Removed ConnectionPool, NumericExtensions. Added dependency on assistance.

=== 1.0.1 (2008-01-12)

* Changed postgres adapter to quote column references using double quotes.

* Applied patch for oracle adapter: fix behavior of limit and offset, transactions, #table_exists?, #tables and additional specs (thanks Liming Lian #122).

* Allow for additional filters on a grouped dataset (#119 and #120)

* Changed mysql adapter to default to localhost if :host option is not specified (#114).

* Refactored Sequelizer to use Proc#to_sexp (method provided by r2r).

* Enhanced Database.connect to accept options with string keys, so it can now accept options loaded from YAML files. Database.connect also automatically converts :username option into :user for compatibility with existing YAML configuration files for AR and DataMapper.

=== 1.0.0.1 (2008-01-03)

* Changed MySQL adapter to support specifying socket option.

* Added support for limiting and paginating datasets with fixed SQL, gotten with DB#fetch (thanks Ruy Diaz). 

* Added new Dataset#from_self method that returns a dataset selecting from the original dataset.

=== 1.0 (2008-01-02)

* Removed deprecated adapter stubs.

* Removed Sequel::Model() stub.

* Changed name to sequel_core.

* 100% code coverage.

* Fixed error behavior when sequel_model is not available.

* Fixed error behavior when parse_tree or ruby2ruby are not available.

=== 0.5.0.2 (2008-01-01)

* Fixed String#to_time to raise error correctly for invalid time stamps.

* Improved code coverage - now at 99.2%.

=== 0.5.0.1 (2007-12-31)

* Added a stub for Sequel::Model that auto-loads sequel_model.
