@@ -52,7 +52,6 @@ class String
     rescue Exception => e
       raise Sequel::Error::InvalidValue, "Invalid time value '#{self}' (#{e.message})"
     end
-     # Why does Time.parse('0000-00-00') bork and not return nil or some such?
   end
 
   # Converts a string into a Date object.
