@@ -205,6 +205,34 @@ context "DB#create_table" do
     end
     @db.sqls.should == ["CREATE TABLE cats (id integer)", "CREATE UNIQUE INDEX cats_id_name_index ON cats (id, name)"]
   end
+  
+  specify "should accept unnamed constraint definitions" do
+    @db.create_table(:cats) do
+      integer :score
+      check {:x > 0 && :y < 1}
+    end
+    @db.sqls.should == ["CREATE TABLE cats (score integer, CHECK (((x > 0) AND (y < 1))))"]
+    @db.sqls.clear
+
+    @db.create_table(:cats) do
+      check 'price < ?', 100
+    end
+    @db.sqls.should == ["CREATE TABLE cats (CHECK (price < 100))"]
+  end
+
+  specify "should accept named constraint definitions" do
+    @db.create_table(:cats) do
+      integer :score
+      constraint :valid_score, 'score <= 100'
+    end
+    @db.sqls.should == ["CREATE TABLE cats (score integer, CONSTRAINT valid_score CHECK (score <= 100))"]
+    @db.sqls.clear
+
+    @db.create_table(:cats) do
+      constraint(:blah_blah) {:x > 0 && :y < 1}
+    end
+    @db.sqls.should == ["CREATE TABLE cats (CONSTRAINT blah_blah CHECK (((x > 0) AND (y < 1))))"]
+  end
 end
 
 context "DB#create_table!" do
